--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ gtag('config', 'UA-64310208-4');
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Bellcoin | Let's ring your bell of life.</title>
-<meta name="keywords" content="Bellcoin,crypto" />
-<meta name="description" content="Bellcoin is a safe and revolutionary crypto currency and is resistant to ASIC and GPU mining." />
-<meta property="og:title" content="Bellcoin" />
+<title>MiningEnthusiastCoin | For the miner, of the miner,by the miner.</title>
+<meta name="keywords" content="MiningEnthusiastCoin,crypto,mining" />
+<meta name="description" content="For the miner, of the miner,by the miner. MiningEnthusiastCoin" />
+<meta property="og:title" content="MiningEnthusiastCoin" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://bellcoin.web4u.jp/" />
-<meta property="og:image" content="https://bellcoin.web4u.jp/images/ogp.png" />
+<meta property="og:url" content="https://miningenthusiastcoin.com/" />
+<meta property="og:image" content="https://miningenthusiastcoin.com/images/ogp.png" />
 <meta name="twitter:card" content="summary_large_image">
 <link rel="shortcut icon" href="/favicon.ico" />
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
@@ -30,20 +30,17 @@ gtag('config', 'UA-64310208-4');
 <div id="wrapper1">
 	<div id="header-wrapper">
 		<div id="header" class="container">
-			<div id="logo"> <img src="images/bellcoin.svg" />
-				<h1><a href="https://github.com/bellcoin-org/bellcoin" target="_blank">Bellcoin</a></h1>
-				<span>Let's ring your bell of life.</span>
+			<div id="logo"> <img src="images/bitcoin.png" />
+				<h1><a href="https://github.com/bellcoin-org/bellcoin" target="_blank">Mining<br>Enthusiast<br>Coin</a></h1>
+				<span>For the miner,<br>of the miner,<br>by the miner.</span>
 			</div>
 			<div id="menu">
 				<ul>
 					<li class="item"><a href="#about" accesskey="1" title="About">About</a></li>
 					<li class="item"><a href="#features" accesskey="2" title="Features">Features</a></li>
 					<li class="item"><a href="#specs" accesskey="3" title="Specs">Specs</a></li>
-					<li class="item_wallet"><a href="#wallet" accesskey="4" title="Wallet">Wallet</a></li>
-					<li class="item"><a href="#exchange" accesskey="5" title="Exchange">Exchange</a></li>
-					<li class="item"><a href="#link" accesskey="6" title="Shop">Link</a></li>
-					<li class="item"><a href="#shop" accesskey="7" title="Shop">Shop</a></li>
-					<li class="item"><a href="#contact" accesskey="8" title="Contact Us">Contact Us</a></li>
+					<li class="item"><a href="#wallet" accesskey="4" title="Wallet">Wallet</a></li>
+					<li class="item"><a href="#contact" accesskey="5" title="Contact Us">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
@@ -55,10 +52,11 @@ gtag('config', 'UA-64310208-4');
 				<h2>About</h2>
 			</div>
 			<p>
-				<strong>Bellcoin</strong> is a safe and revolutionary crypto currency and is <strong>resistant to ASIC and GPU</strong> mining.<br />
-				It adopts a new algorithm <strong>"YesPoWer"</strong>, and adopts <strong>"LWMA"</strong> as a difficulty algorithm.<br />
-				It inherits technology based on Bitcoin, and has the most up-to-date features such as <strong>SegWit</strong>.<br />
-				Because the block time is as fast as <strong>60 seconds</strong>, it works with speedy transactions.
+				<strong>MiningEnthusiastCoin</strong> was made for the purpose of <strong>supporting the miner</strong>.
+This coin has an advantageous algorithm of GPU, <strong>X16R</strong> and it’s easy to mining.
+Also, it adopted <strong>PoS 3.0</strong>, which reduces the probability of <strong>51% attack</strong>.
+In the future we will make it a multi algorithm and aim for practical coins.
+This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and <strong>PoS 3.0</strong>.
 			</p>
 		</div>
 	</div>
@@ -72,15 +70,8 @@ gtag('config', 'UA-64310208-4');
 				<div class="column1">
 					<div class="box">
 						<span class="icon fa fa-wrench"></span>
-						<h3>YesPoWer 1.0</h3>
-						<span>Consensus Algorithm (PoW)</span>
-					</div>
-				</div>
-				<div class="column2">
-					<div class="box">
-						<span class="icon fa fa-chart-line"></span>
-						<h3>LWMA</h3>
-						<span>Difficulty Algorithm</span>
+						<h3>X16R(PoW) & PoS Version 3</h3>
+						<span>Consensus Algorithm</span>
 					</div>
 				</div>
 				<div class="column3">
@@ -93,7 +84,7 @@ gtag('config', 'UA-64310208-4');
 				<div class="column4">
 					<div class="box">
 						<span class="icon fa fa-rocket"></span>
-						<h3>60 Seconds</h3>
+						<h3>90 Seconds</h3>
 						<span>Fast Block Time</span>
 					</div>
 				</div>
@@ -108,16 +99,26 @@ gtag('config', 'UA-64310208-4');
 			</div>
 			<p>
 				<ul>
-					<li>Ticker: <strong>BELL</strong></li>
-					<li>Consensus Algorithm: <strong>PoW (YesPoWer 1.0)</strong></li>
-					<li>Difficulty Algorithm: <strong>LWMA</strong></li>
-					<li>Block Time: <strong>60 Seconds</strong></li>
-					<li>Port: <strong>25253</strong></li>
-					<li>RPCport: <strong>25252</strong></li>
-					<li>Block Reward: <strong>10 BELL</strong></li>
-					<li>Reward Halving: <strong>Every 1,000,000 blocks</strong></li>
-					<li>Max supply: <strong>200,000,000 BELL</strong></li>
-					<li>Premine: <strong>5%</strong></li>
+					<li>Ticker: <strong>MNEC</strong></li>
+					<li>Consensus Algorithm: <strong>PoW (X16R) & PoS Ver.3</strong></li>
+					<li>Difficulty Algorithm: <strong>Digishiled + eHRC</strong></li>
+					<li>Block Time: <strong>90 Seconds</strong></li>
+					<li>Port: <strong>9635</strong></li>
+					<li>RPCport: <strong>9636</strong></li>
+					<li>Block Reward of PoW: <strong>1~525,600 blocks : 1000 MNEC (about 1.5 years)<br>
+525,601~1,051,200 blocks : 500 MNEC (about 1.5 years)<br>
+1,051,201~2,102,400 blocks : 250 MNEC (about 3 years)<br>
+2,102,401~3,504,000 blocks : 100 MNEC (about 4 years)<br>
+3,504,001~4,380,000 blocks : 200 MNEC (about 2.5 years)<br>
+4,380,001~5,606,400 blocks : 100 MNEC (about 3.5 years)<br>
+5,606,401 block ~ : 50 MNEC</strong></li>
+					<li>Block Reward of PoS: <strong>1~1,401,600 blocks : 10 MNEC (about 4 years)<br>
+1,401,601~2,803,200 blocks : 20 MNEC (about 4 years)<br>
+2,803,201~4,204,800 blocks : 30 MNEC (about 4 years)<br>
+4,204,801~5,606,400 blocks : 40 MNEC (about 4 years)<br>
+5,606,401 block ~ : 50 MNEC</strong></li>
+					<li>Max supply: <strong>1,000,000,000 MNEC</strong></li>
+					<li>Premine, ICO: <strong>no</strong></li>
 				</ul>
 			</p>
 		</div>
@@ -128,34 +129,11 @@ gtag('config', 'UA-64310208-4');
 		<div id="portfolio" class="container downloads">
 			<div class="title">
 				<h2>Wallet</h2>
-				<span class="byline">Bellcoin Core v1.0.2.0</span> </div>
+				<span class="byline">MiningEnthusiastCoin Core v2.0.0.0</span> </div>
 			<div class="inner">
-				<div class="column1">
-					<a href="https://github.com/bellcoin-org/bellcoin/releases/download/1.0.2/bellcoin-1.0.2-win64.zip">
-						<div class="box">
-						<span class="icon fab fa-windows"></span>
-						<h3>Windows 64bit</h3>
-						</div>
-					</a>
-				</div>
-				<div class="column2">
-					<a href="https://github.com/bellcoin-org/bellcoin/releases/download/1.0.2/bellcoin-1.0.2-osx64.dmg">
-						<div class="box">
-						<span class="icon fab fa-apple"></span>
-						<h3>macOS 64bit</h3>
-						</div>
-					</a>
-				</div>
-				<div class="column3">
-					<a href="https://github.com/bellcoin-org/bellcoin/releases/download/1.0.2/bellcoin-1.0.2-linux.tar.gz">
-						<div class="box">
-						<span class="icon fab fa-linux"></span>
-						<h3>Ubuntu 18.04 64bit</h3>
-						</div>
-					</a>
-				</div>
+<h1>Coming Soon....</h1><br>
 				<div class="column4">
-					<a target="_blank" href="https://github.com/bellcoin-org/bellcoin/releases">
+					<a target="_blank" href="https://github.com/MiningEnthusiastCoin-Project/MiningEnthusiastCoin">
 						<div class="box">
 						<span class="icon fab fa-github"></span>
 						<h3>GitHub</h3>
@@ -165,112 +143,21 @@ gtag('config', 'UA-64310208-4');
 			</div>
 		</div>
 	</div>
-	<a name="exchange" />
-	<div id="wrapper2">
-		<div id="exchange" class="container">
-			<div class="title">
-				<h2>Exchange</h2>
-			</div>
-			<div class="inner">
-				<div class="column1">
-					<a target="_blank" href="https://bitebtc.com/trade/bell_btc">
-						<div class="box">
-						<span class="icon fab fa-btc"></span>
-                        <h3>BiteBTC.com<br /><br />BELL / BTC</h3>
-						</div>
-					</a>
-				</div>
-				<div class="column2">
-					<a target="_blank" href="https://bitebtc.com/trade/bell_eth">
-						<div class="box">
-						<span class="icon fab fa-ethereum"></span>
-                        <h3>BiteBTC.com<br /><br />BELL / ETH</h3>
-						</div>
-					</a>
-				</div>
-			</div>
+	<a name="contact" />
+	<div id="footer" class="container">
+		<div class="title">
+			<h2>Get in touch</h2>
+			<span class="byline">Twitter / Discord / GitHub</span>
 		</div>
+		<ul class="contact">
+			<li><a href="https://twitter.com/MNEC_official" target="_blank" class="icon fab fa-twitter"><span>Twitter</span></a></li>
+			<li><a href="https://discord.gg/zktcng7" target="_blank" class="icon fab fa-discord"><span>Discord</span></a></li>
+			<li><a href="https://github.com/MiningEnthusiastCoin-Project/MiningEnthusiastCoin" target="_blank" class="icon fab fa-github"><span>GitHub</span></a></li>
+		</ul>
 	</div>
-	<a name="link" />
-	<div id="wrapper3">
-		<div id="portfolio" class="container downloads">
-			<div class="title">
-				<h2>Link</h2>
-			</div>
-			<div class="inner">
-				<div class="column1">
-					<a target="_blank" href="https://github.com/bellflower2015/cpuminer-opt/releases">
-						<div class="box">
-						<span class="icon fas fa-wrench"></span>
-                        <h3>Mining Software<br />cpuminer-opt v3.8.10-bf</h3>
-						</div>
-					</a>
-				</div>
-				<div class="column2">
-					<a target="_blank" href="https://explorer.bellcoin.web4u.jp">
-						<div class="box">
-						<span class="icon fas fa-search"></span>
-						<h3>Block Explorer</h3>
-						</div>
-					</a>
-				</div>
-				<div class="column3">
-					<a target="_blank" href="https://bitcointalk.org/index.php?topic=5035609.0">
-						<div class="box">
-						<span class="icon fab fa-btc"></span>
-						<h3>Bitcointalk</h3>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<a name="shop" />
-	<div id="wrapper2">
-		<div id="shop" class="container">
-			<div class="title">
-				<h2>Shop</h2>
-			</div>
-			<div class="inner">
-				<a target="_blank" href="https://suzuri.jp/bellflower2015/1338990/tote-bag/m/natural">
-					<div class="column1">
-						<img src="images/shop2.png" />
-					</div>
-				</a>
-				<a target="_blank" href="https://suzuri.jp/bellflower2015/1338990/t-shirt/s/white">
-					<div class="column2">
-						<img src="images/shop3.png" />
-					</div>
-				</a>
-				<a target="_blank" href="https://suzuri.jp/bellflower2015/1338990/smartphone-case/iphone7-plus/white">
-					<div class="column3">
-						<img src="images/shop5.png" />
-					</div>
-				</a>
-				<a target="_blank" href="https://suzuri.jp/bellflower2015/1338990/mug/m/white">
-					<div class="column4">
-						<img src="images/shop9.png" />
-					</div>
-				</a>
-			</div>
-		</div>
-		</div>
-	</div>
-</div>
-<a name="contact" />
-<div id="footer" class="container">
-	<div class="title">
-		<h2>Get in touch</h2>
-		<span class="byline">Twitter / Discord / GitHub</span>
-	</div>
-	<ul class="contact">
-		<li><a href="https://twitter.com/bellcoin_crypto" target="_blank" class="icon fab fa-twitter"><span>Twitter</span></a></li>
-		<li><a href="https://discord.gg/kE6DKyd" target="_blank" class="icon fab fa-discord"><span>Discord</span></a></li>
-		<li><a href="https://github.com/bellcoin-org/bellcoin" target="_blank" class="icon fab fa-github"><span>GitHub</span></a></li>
-	</ul>
 </div>
 <div id="copyright" class="container">
-	<p>&copy; 2018 Kikyou Akino (<a href="https://twitter.com/bellflower2015" target="_blank">@bellflower2015</a>) All rights reserved.</p>
+	<p>&copy; 2018-2019 Miner-X (<a href="https://twitter.com/Miner_X_MNEC" target="_blank">@Miner_X_MNEC</a>) <br>&copy; 2018-2019 Kikyou Akino (<a href="https://twitter.com/bellflower2015" target="_blank">@bellflower2015</a>) <br>All rights reserved.</p>
 </div>
 </body>
 </html>
