add exchange, links, and wp

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ gtag('config', 'UA-64310208-4');
 					<li class="item"><a href="#features" accesskey="2" title="Features">Features</a></li>
 					<li class="item"><a href="#specs" accesskey="3" title="Specs">Specs</a></li>
 					<li class="item"><a href="#wallet" accesskey="4" title="Wallet">Wallet</a></li>
-					<li class="item"><a href="#contact" accesskey="5" title="Contact Us">Contact Us</a></li>
+					<li class="item"><a href="#exchange" accesskey="5" title="Exchange">Exchange</a></li>
+					<li class="item"><a href="#link" accesskey="6" title="Link">Link</a></li>
+					<li class="item"><a href="#wp" accesskey="7" title="WP & Roadmap">WP & Roadmap</a></li>
+					<li class="item"><a href="#contact" accesskey="8" title="Contact Us">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
@@ -131,7 +134,7 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 				<h2>Wallet</h2>
 				<span class="byline">MiningEnthusiastCoin Core v2.0.0.0</span> </div>
 			<div class="inner">
-<h1>Coming Soon....</h1><br>
+				<p>Coming Soon....</p>
 				<div class="column4">
 					<a target="_blank" href="https://github.com/MiningEnthusiastCoin-Project/MiningEnthusiastCoin">
 						<div class="box">
@@ -141,6 +144,42 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 					</a>
 				</div>
 			</div>
+		</div>
+	</div>
+	<a name="exchange" />
+	<div id="wrapper2">
+		<div id="exchange" class="container">
+			<div class="title">
+				<h2>Exchange</h2>
+			</div>
+			<p>Coming Soon...</p>
+		</div>
+	</div>
+	<a name="link" />
+	<div id="wrapper3">
+		<div id="portfolio" class="container downloads">
+			<div class="title">
+				<h2>Link</h2>
+			</div>
+			<div class="inner">
+				<div class="column1">
+					<a target="_blank">
+						<div class="box">
+						<span class="icon fab fa-btc"></span>
+						<h3>Bitcointalk</h3>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<a name="wp" />
+	<div id="wrapper2">
+		<div id="welcome" class="container">
+			<div class="title">
+				<h2>WP & Roadmap</h2>
+			</div>
+			<p>Coming Soon...</p>
 		</div>
 	</div>
 	<a name="contact" />
