fix exchange to welcome

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 	</div>
 	<a name="exchange" />
 	<div id="wrapper2">
-		<div id="exchange" class="container">
+		<div id="welcome" class="container">
 			<div class="title">
 				<h2>Exchange</h2>
 			</div>
