--- a/index.html
+++ b/index.html
@@ -1,58 +1,57 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="ja">
 <head>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-64310208-4"></script>
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-64310208-4"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-64310208-4');
-</script>
+</script>-->
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>MiningEnthusiastCoin | For the miner, of the miner,by the miner.</title>
-<meta name="keywords" content="MiningEnthusiastCoin,crypto,mining" />
-<meta name="description" content="For the miner, of the miner,by the miner. MiningEnthusiastCoin" />
-<meta property="og:title" content="MiningEnthusiastCoin" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://miningenthusiastcoin.com/" />
-<meta property="og:image" content="https://miningenthusiastcoin.com/images/ogp.png" />
+<meta name="keywords" content="MiningEnthusiastCoin,crypto,mining">
+<meta name="description" content="For the miner, of the miner,by the miner. MiningEnthusiastCoin">
+<meta property="og:title" content="MiningEnthusiastCoin">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://miningenthusiastcoin.com/">
+<meta property="og:image" content="https://miningenthusiastcoin.com/images/ogp.png">
 <meta name="twitter:card" content="summary_large_image">
-<link rel="shortcut icon" href="/favicon.ico" />
-<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="icon" href="/favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+<link href="default.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-<div id="wrapper1">
+<div class="wrapper1">
 	<div id="header-wrapper">
 		<div id="header" class="container">
-			<div id="logo"> <img src="images/bitcoin.png" />
-				<h1><a href="https://github.com/bellcoin-org/bellcoin" target="_blank">Mining<br>Enthusiast<br>Coin</a></h1>
+			<div id="logo"> <img src="images/bitcoin.png" alt="mnec-logo">
+				<h1><a href="https://github.com/MiningEnthusiastCoin-Project/MiningEnthusiastCoin" target="_blank">Mining<br>Enthusiast<br>Coin</a></h1>
 				<span>For the miner,<br>of the miner,<br>by the miner.</span>
 			</div>
 			<div id="menu">
 				<ul>
-					<li class="item"><a href="#about" accesskey="1" title="About">About</a></li>
-					<li class="item"><a href="#features" accesskey="2" title="Features">Features</a></li>
-					<li class="item"><a href="#specs" accesskey="3" title="Specs">Specs</a></li>
-					<li class="item"><a href="#wallet" accesskey="4" title="Wallet">Wallet</a></li>
-					<li class="item"><a href="#exchange" accesskey="5" title="Exchange">Exchange</a></li>
-					<li class="item"><a href="#link" accesskey="6" title="Link">Link</a></li>
-					<li class="item"><a href="#wp" accesskey="7" title="WP & Roadmap">WP & Roadmap</a></li>
-					<li class="item"><a href="#contact" accesskey="8" title="Contact Us">Contact Us</a></li>
+					<li class="item"><a href="#about-link" accesskey="1" title="About">About</a></li>
+					<li class="item"><a href="#features-link" accesskey="2" title="Features">Features</a></li>
+					<li class="item"><a href="#specs-link" accesskey="3" title="Specs">Specs</a></li>
+					<li class="item"><a href="#wallet-link" accesskey="4" title="Wallet">Wallet</a></li>
+					<li class="item"><a href="#exchange-link" accesskey="5" title="Exchange">Exchange</a></li>
+					<li class="item"><a href="#links-link" accesskey="6" title="Link">Link</a></li>
+					<li class="item"><a href="#wp-link" accesskey="7" title="WP &amp; Roadmap">WP &amp; Roadmap</a></li>
+					<li class="item"><a href="#contact-link" accesskey="8" title="Contact Us">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<a name="about" />
-	<div id="wrapper2">
-		<div id="welcome" class="container">
+	<div class="wrapper2">
+		<div class="welcome container">
 			<div class="title">
-				<h2>About</h2>
+				<h2 id="about-link">About</h2>
 			</div>
 			<p>
 				<strong>MiningEnthusiastCoin</strong> was made for the purpose of <strong>supporting the miner</strong>.
@@ -63,24 +62,23 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 			</p>
 		</div>
 	</div>
-	<a name="features" />
-	<div id="wrapper3">
-		<div id="portfolio" class="container">
+	<div class="wrapper3">
+		<div class="portfolio container">
 			<div class="title">
-				<h2>Features</h2>
+				<h2 id="features-link">Features</h2>
 				<span class="byline">&nbsp;</span> </div>
 			<div class="inner">
 				<div class="column1">
 					<div class="box">
 						<span class="icon fa fa-wrench"></span>
-						<h3>X16R(PoW) & PoS Version 3</h3>
+						<h3>X16R(PoW) &amp; PoS Version 3</h3>
 						<span>Consensus Algorithm</span>
 					</div>
 				</div>
 				<div class="column3">
 					<div class="box">
 						<span class="icon fa fa-key"></span>
-						<h3>SegWit</h2>
+						<h3>SegWit</h3>
 						<span>Block Architecture</span>
 					</div>
 				</div>
@@ -94,16 +92,14 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 			</div>
 		</div>
 	</div>
-	<a name="specs" />
-	<div id="wrapper2">
-		<div id="welcome" class="container">
+	<div class="wrapper2">
+		<div class="welcome container">
 			<div class="title">
-				<h2>Specs</h2>
+				<h2 id="specs-link">Specs</h2>
 			</div>
-			<p>
 				<ul>
 					<li>Ticker: <strong>MNEC</strong></li>
-					<li>Consensus Algorithm: <strong>PoW (X16R) & PoS Ver.3</strong></li>
+					<li>Consensus Algorithm: <strong>PoW (X16R) &amp; PoS Ver.3</strong></li>
 					<li>Difficulty Algorithm: <strong>Digishiled + eHRC</strong></li>
 					<li>Block Time: <strong>90 Seconds</strong></li>
 					<li>Port: <strong>9635</strong></li>
@@ -123,15 +119,12 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 					<li>Max supply: <strong>1,000,000,000 MNEC</strong></li>
 					<li>Premine, ICO: <strong>no</strong></li>
 				</ul>
-			</p>
-		</div>
 		</div>
 	</div>
-	<a name="wallet" />
-	<div id="wrapper3">
-		<div id="portfolio" class="container downloads">
+	<div class="wrapper3">
+		<div class="portfolio container downloads">
 			<div class="title">
-				<h2>Wallet</h2>
+				<h2 id="wallet-link">Wallet</h2>
 				<span class="byline">MiningEnthusiastCoin Core v2.0.0.0</span> </div>
 			<div class="inner">
 				<p>Coming Soon....</p>
@@ -146,24 +139,22 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 			</div>
 		</div>
 	</div>
-	<a name="exchange" />
-	<div id="wrapper2">
-		<div id="welcome" class="container">
+	<div class="wrapper2">
+		<div class="welcome container">
 			<div class="title">
-				<h2>Exchange</h2>
+				<h2 id="exchange-link">Exchange</h2>
 			</div>
 			<p>Coming Soon...</p>
 		</div>
 	</div>
-	<a name="link" />
-	<div id="wrapper3">
-		<div id="portfolio" class="container downloads">
+	<div class="wrapper3">
+		<div class="portfolio container downloads">
 			<div class="title">
-				<h2>Link</h2>
+				<h2 id="links-link">Link</h2>
 			</div>
 			<div class="inner">
 				<div class="column1">
-					<a target="_blank">
+					<a href="https://bitcointalk.org/index.php?topic=4706911.0" target="_blank">
 						<div class="box">
 						<span class="icon fab fa-btc"></span>
 						<h3>Bitcointalk</h3>
@@ -173,19 +164,17 @@ This coin is a highly practical coin with a hybrid of <strong>X16R</strong> and 
 			</div>
 		</div>
 	</div>
-	<a name="wp" />
-	<div id="wrapper2">
-		<div id="welcome" class="container">
+	<div class="wrapper2">
+		<div class="welcome container">
 			<div class="title">
-				<h2>WP & Roadmap</h2>
+				<h2 id="wp-link">WP &amp; Roadmap</h2>
 			</div>
 			<p>Coming Soon...</p>
 		</div>
 	</div>
-	<a name="contact" />
 	<div id="footer" class="container">
 		<div class="title">
-			<h2>Get in touch</h2>
+			<h2 id="contact-link">Get in touch</h2>
 			<span class="byline">Twitter / Discord / GitHub</span>
 		</div>
 		<ul class="contact">
